--- a/tigacrafting/templates/tigacrafting/aimalog.html
+++ b/tigacrafting/templates/tigacrafting/aimalog.html
@@ -13,10 +13,17 @@
         table.dataTable td {
             font-size: 0.8em;
         }
+        .dtGreen{
+            background-color: #a9f6ba !important;
+        }
+
+        .dtOrange{
+            background-color: #f27e56 !important;
+        }
     </style>
     <script src={% static "tigacrafting/jquery/1.11.1/jquery.min.js" %}></script>
-    <script src={% static "tigacrafting/bootstrap-3.2.0-dist/js/bootstrap.min.js" %}></script>
     <script src={% static "tigacrafting/jquery-ui/jquery-ui.min.js" %}></script>
+    <script src={% static "tigacrafting/bootstrap-3.2.0-dist/js/bootstrap.min.js" %}></script>
 
         <div class="navbar-wrapper">
             <div id="notifications_navbar" class="navbar-fixed-top navbar navbar-inverse" role="navigation">
@@ -57,8 +64,24 @@
 <body>
     <div class="container">
         <h1 class="text-center">Alert log</h1>
-        <div class="alert alert-danger" role="alert">
+        <div class="alert alert-info" role="alert">
             <form class="form-horizontal">
+                <div class="form-group">
+                    <label for="date_from" class="col-sm-1 control-label">Processed filter</label>
+                    <div class="col-sm-5">
+                        <div class="btn-group" data-toggle="buttons">
+                          <label class="btn btn-default active">
+                            <input type="radio" name="processed" value="all" id="all">All
+                          </label>
+                          <label class="btn btn-default">
+                            <input type="radio" name="processed" value="processed" id="processed">Processed
+                          </label>
+                          <label class="btn btn-default">
+                            <input type="radio" name="processed" value="unprocessed" id="unprocessed">Unprocessed
+                          </label>
+                        </div>
+                    </div>
+                </div>
                 <div class="form-group">
                     <label for="date_from" class="col-sm-1 control-label">Rep. date - From</label>
                     <div class="col-sm-5">
@@ -167,7 +190,7 @@
             </div>
         </div>
     </div>
-    <table class="table table-striped table-bordered table-hover" id="aimalog_table" style="width:100%;"></table>
+    <table class="table table-bordered table-hover" id="aimalog_table" style="width:100%;"></table>
     <input id="filter_value" type="hidden" value="">
 </body>
     <script src={% static "stats/datatables.min.js" %}></script>
