--- a/tigamap/templates/tigamap/app_filtered.html
+++ b/tigamap/templates/tigamap/app_filtered.html
@@ -352,8 +352,8 @@
 
 
                 var djoptions = {"layers": [
-                            ["OSM", "//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",
-                                "\u00a9 <a href=\"//www.openstreetmap.org/copyright\">OpenStreetMap</a> contributors"]
+                            ["OSM", "https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",
+                                "\u00a9 <a href=\"https://www.openstreetmap.org/copyright\">OpenStreetMap</a> contributors"]
                         ],
                             "minimap": false, "scale": "metric", "center": [centerLat, centerLng], "tilesextent": [],
                             "attributionprefix": null, "zoom": initialZoom, "maxzoom": 18, "minzoom": 0, "extent": [
