--- a/stats/templates/stats/fix_user_chart.html
+++ b/stats/templates/stats/fix_user_chart.html
@@ -6,8 +6,8 @@
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 	<title>MosquitoAlert Stats</title>
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-<script src="//code.highcharts.com/highcharts.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<script src="https://code.highcharts.com/highcharts.js"></script>
 
 
   </head>
