--- a/tigamap/templates/tigamap/bcn_map.html
+++ b/tigamap/templates/tigamap/bcn_map.html
@@ -13,8 +13,8 @@
     bounds_array = [[southWest.lat, southWest.lng],[northEast.lat, northEast.lng]];
 
  var djoptions = {"layers": [
-                        ["OSM", "//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",
-                            "\u00a9 <a href=\"//www.openstreetmap.org/copyright\">OpenStreetMap</a> contributors"]
+                        ["OSM", "https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",
+                            "\u00a9 <a href=\"https://www.openstreetmap.org/copyright\">OpenStreetMap</a> contributors"]
                     ],
                         "minimap": false, "scale": "metric", "center": [centerLat, centerLng], "tilesextent": [],
                         "attributionprefix": null, "zoom": initialZoom, "maxzoom": 18, "minzoom": 12, "extent": bounds_array, "resetview": true, "srid": null, "fitextent": true},
