--- a/tigaserver_app/templates/swagger.html
+++ b/tigaserver_app/templates/swagger.html
@@ -6,11 +6,11 @@
     <title>Mosquito Alert Documentation</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="//unpkg.com/swagger-ui-dist@3/swagger-ui.css" />
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/swagger-ui-dist@3/swagger-ui.css" />
   </head>
   <body>
     <div id="swagger-ui"></div>
-    <script src="//unpkg.com/swagger-ui-dist@3/swagger-ui-bundle.js" charset="UTF-8"></script>
+    <script src="https://unpkg.com/swagger-ui-dist@3/swagger-ui-bundle.js" charset="UTF-8"></script>
     <script>
     const ui = SwaggerUIBundle({
         url: "{% static "tigaserver_app/schema-v1.yaml" %}",
