--- a/tigacrafting/templates/tigacrafting/aimalog.html
+++ b/tigacrafting/templates/tigacrafting/aimalog.html
@@ -20,6 +20,10 @@
         .dtOrange{
             background-color: #f27e56 !important;
         }
+
+        .dtRed{
+            background-color: #fe676e !important;
+        }
     </style>
     <script src={% static "tigacrafting/jquery/1.11.1/jquery.min.js" %}></script>
     <script src={% static "tigacrafting/jquery-ui/jquery-ui.min.js" %}></script>
@@ -66,25 +70,25 @@
         <h1 class="text-center">Alert log</h1>
         <div class="alert alert-info" role="alert">
             <form class="form-horizontal">
+<!--                <div class="form-group">-->
+<!--                    <label for="" class="col-sm-1 control-label">Processed filter</label>-->
+<!--                    <div class="col-sm-6">-->
+<!--                        <div class="btn-group" data-toggle="buttons">-->
+<!--                          <label class="btn btn-default active">-->
+<!--                            <input type="radio" name="processed" value="all" id="all">All-->
+<!--                          </label>-->
+<!--                          <label class="btn btn-default">-->
+<!--                            <input type="radio" name="processed" value="processed" id="processed">Processed-->
+<!--                          </label>-->
+<!--                          <label class="btn btn-default">-->
+<!--                            <input type="radio" name="processed" value="unprocessed" id="unprocessed">Unprocessed-->
+<!--                          </label>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
                 <div class="form-group">
-                    <label for="" class="col-sm-1 control-label">Processed filter</label>
-                    <div class="col-sm-5">
-                        <div class="btn-group" data-toggle="buttons">
-                          <label class="btn btn-default active">
-                            <input type="radio" name="processed" value="all" id="all">All
-                          </label>
-                          <label class="btn btn-default">
-                            <input type="radio" name="processed" value="processed" id="processed">Processed
-                          </label>
-                          <label class="btn btn-default">
-                            <input type="radio" name="processed" value="unprocessed" id="unprocessed">Unprocessed
-                          </label>
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="" class="col-sm-1 control-label">Species validation</label>
-                    <div class="col-sm-5">
+                    <label for="" class="col-sm-1 control-label">Species match</label>
+                    <div class="col-sm-6">
                         <div class="btn-group" data-toggle="buttons">
                           <label class="btn btn-default active">
                             <input type="radio" name="ia_hit" value="all_alert" id="all_alert">All
@@ -93,10 +97,45 @@
                             <input type="radio" name="ia_hit" value="pending" id="pending">Pending <span title="Not yet evaluated" class="glyphicon glyphicon glyphicon-question-sign"></span>
                           </label>
                           <label class="btn btn-default">
-                            <input type="radio" name="ia_hit" value="alert_ok" id="alert_ok">Correct alert <span title="Correct alert" class="glyphicon glyphicon-certificate"></span>
+                            <input type="radio" name="ia_hit" value="alert_ok" id="alert_ok">Species match <span title="Species match" class="glyphicon glyphicon-certificate"></span>
                           </label>
                         <label class="btn btn-default">
-                            <input type="radio" name="ia_hit" value="alert_ko" id="alert_ko">Incorrect alert <span title="Incorrect alert" class="glyphicon glyphicon-ban-circle"></span>
+                            <input type="radio" name="ia_hit" value="alert_ko" id="alert_ko">Species mismatch <span title="Species mismatch" class="glyphicon glyphicon-ban-circle"></span>
+                          </label>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="" class="col-sm-1 control-label">Comm. status</label>
+                    <div class="col-sm-6">
+                        <div class="btn-group" data-toggle="buttons">
+                          <label class="btn btn-default active">
+                            <input type="radio" name="comm_status" value="all_comm" id="all_comm">All
+                          </label>
+                          <label class="btn btn-default">
+                            <input type="radio" name="comm_status" value="new_comm" id="new_comm">New <span title="New" class="glyphicon glyphicon-exclamation-sign"></span>
+                          </label>
+                          <label class="btn btn-default">
+                            <input type="radio" name="comm_status" value="accepted_comm" id="accepted_comm">Accepted <span title="Accepted" class="glyphicon glyphicon-ok"></span>
+                          </label>
+                          <label class="btn btn-default">
+                            <input type="radio" name="comm_status" value="sent_comm" id="sent_comm">Accepted and communicated <span title="Accepted and communicated" class="glyphicon glyphicon-envelope"></span>
+                          </label>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="" class="col-sm-1 control-label">Validation</label>
+                    <div class="col-sm-6">
+                        <div class="btn-group" data-toggle="buttons">
+                          <label class="btn btn-default active">
+                            <input type="radio" name="val_status" value="any_val" id="any_val">All
+                          </label>
+                          <label class="btn btn-default">
+                            <input type="radio" name="val_status" value="done_val" id="done_val">Validated <span title="Reviewed and sent" class="glyphicon glyphicon-check"></span>
+                          </label>
+                          <label class="btn btn-default">
+                            <input type="radio" name="val_status" value="pending_val" id="pending_val">Not validated <span title="Reviewed, not sent" class="glyphicon glyphicon-remove"></span>
                           </label>
                         </div>
                     </div>
