--- a/tigacrafting/templates/tigacrafting/aimalog_process.html
+++ b/tigacrafting/templates/tigacrafting/aimalog_process.html
@@ -113,23 +113,55 @@
             <h3>Alert communication status</h3>
             <div class="alert_info_wrapper alert alert-info">
                 <div class="row">
-                    <div class="btn-group col-md-12" data-toggle="buttons">
+                    <div class="btn-group col-md-12">
                           <!--<label class="btn btn-default active alert">
                             <input type="radio" name="communication_status" value="nono" id="nono">Not yet reviewed, not sent
                           </label>-->
-                          <label class="btn btn-default alert">
+                          <!--<label class="btn btn-default alert">-->
+                            <div class="col-md-3">
                             <input type="radio" name="communication_status" value="0" id="new_comm">New <span class="glyphicon glyphicon-exclamation-sign"></span>
-                          </label>
-                          <label class="btn btn-default alert">
+                            </div>
+                          <!--</label>-->
+                          <!--<label class="btn btn-default alert">-->
+                            <div class="col-md-3">
                             <input type="radio" name="communication_status" value="1" id="accepted_comm">Accepted <span class="glyphicon glyphicon-ok"></span>
-                          </label>
-                          <label class="btn btn-default alert">
+                            </div>
+                          <!--</label>-->
+                          <!--<label class="btn btn-default alert">-->
+                            <div class="col-md-3">
+                            <input type="radio" name="communication_status" value="3" id="rejected_comm">Rejected <span class="glyphicon glyphicon-remove"></span>
+                            </div>
+                          <!--</label>-->
+                          <!--<label class="btn btn-default alert">-->
+                            <div class="col-md-3">
                             <input type="radio" name="communication_status" value="2" id="sent_comm">Accepted and communicated <span class="glyphicon glyphicon glyphicon-envelope"></span>
-                          </label>
+                            </div>
+                          <!--</label>-->
                     </div>
                 </div>
             </div>
         </div>
+        <!--
+        <h3>Alert status review</h3>
+        <div class="alert_info_wrapper alert alert-info">
+            <div class="row">
+                <div class="col-md-1">
+                    <b>Set status to:</b>
+                </div>
+                <div class="col-md-10">
+                    <select>
+                        <option value="">unchanged</option>
+                        {% for s in statuses %}
+                        <option value="{{s}}">{{s}}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+                <div class="col-md-1">
+                    <button class="btn btn-primary button-status" id="status"><span title="Save status" class="glyphicon glyphicon-floppy-disk"></span></button>
+                </div>
+            </div>
+        </div>
+        -->
         <h3>Alert comments</h3>
         <div class="alert_info_wrapper alert alert-info">
             <div class="row">
@@ -150,6 +182,10 @@
                 <div class="col-md-6">
                     <h4>Alert Location</h4>
                     <div class="alert_info_wrapper alert alert-success">
+                        <div class="row">
+                            <div class="col-md-6"><b>Code location</b></div>
+                            <div class="col-md-6">{{ alert.loc_code }}</div>
+                        </div>
                         {% for n in admin_info %}
                         <div class="row">
                             <div class="col-md-6"><b>{{ n.label }}</b></div>
@@ -163,7 +199,12 @@
                     <div class="alert_info_wrapper alert alert-success">
                         <div class="row">
                             <div class="col-md-12">
-                                <b>Notification contact email for country {{ alert.get_alert_country.name_engl }}: </b> {% for c in contacts %} {{ c }} {% endfor %}
+                                <b>Notification contact email for country {{ alert.get_alert_country.name_engl }}: </b>
+                                <ul>
+                                {% for c in contacts %}
+                                <li>{{ c }}</li>
+                                {% endfor %}
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -179,11 +220,26 @@
                                 {% if report_info.in_progress %}
                                     <span class="label label-default">Not yet determined</span>
                                 {% else %}
-                                    {% if report_info.value == '1'%}
-                                        <h4><span class="label label-success">Probably {{ report_info.category }}</span></h4>
+                                    {% if report_info.value %}
+                                        {% if report_info.value == '1'%}
+                                            <h4><span class="label label-success">Probably {{ report_info.category }}</span></h4>
+                                        {% else %}
+                                            <h4><span class="label label-success">Definitely {{ report_info.category }}</span></h4>
+                                        {% endif %}
                                     {% else %}
-                                        <h4><span class="label label-success">Definitely {{ report_info.category }}</span></h4>
+                                        <h4><span class="label label-success">{{ report_info.category }}</span></h4>
                                     {% endif %}
+                                {% endif %}
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6"><b>Status of validated species in location</b></div>
+                            <div class="col-md-6">
+                                {% if report_info.in_progress %}
+                                    Not yet determined
+                                {% else %}
+                                    <h4><span id="status_label" class="label label-success">Loading...</span> <span id="reported_count"></span></h4>
+                                    <i id="status_spinner" class="fa fa-spinner fa-spin fa-fw" aria-hidden="true"></i>
                                 {% endif %}
                             </div>
                         </div>
@@ -203,6 +259,7 @@
                     </div>
                 </div>
             </div>
+            <!--
             <div class="row">
                 <div class="col-md-6">
                     <h4>Alert status before report validation</h4>
@@ -217,6 +274,7 @@
                     </div>
                 </div>
             </div>
+            -->
         <h4>Report information</h4>
         <div class="report_info_wrapper alert alert-info">
             <div class="row" style="padding: 5px; background-color:{% if report.type == 'adult' %}#F2BB66;{% else %}#736AFF;{% endif %}">
@@ -386,6 +444,36 @@
             <br>
             <div class="border-row">
                 <br>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="send_email_modal" tabindex="-1" role="dialog" aria-labelledby="save_block_modal_label" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="save_block_modal_label">About to send alert email</h4>
+                </div>
+                <div id="save_block_modal_body" class="modal-body">
+                    About to do the following changes:
+                    <ul>
+                        <li> - Communication status will be set to <b>'Accepted and communicated'</b></li>
+                        <li>
+                             - <b>Send alert email</b> to the following recipients (country {{ alert.get_alert_country.name_engl }}):
+                            <ul>
+                                {% for c in contacts %}
+                                <li> * <i>{{ c }}</i></li>
+                                {% endfor %}
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+                <div class="modal-footer">
+                    Do you want to proceed?
+                    <button type="button" class="btn btn-default">Yes</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">No</button>
+                </div>
             </div>
         </div>
     </div>
